--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Parse bnf expressions to a structured json.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.js"
+    "test": "mocha test/**/*.js",
+    "cover": "istanbul cover _mocha"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,16 @@
   },
   "homepage": "https://github.com/LoveKino/bnfer#readme",
   "devDependencies": {
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "readme-builder": "0.0.12"
+  },
+  "readmeDocOptions": {
+    "ignores": [
+      "**/*/node_modules/**/*",
+      "node_modules/**/*",
+      "test/**/*",
+      "coverage/**/*"
+    ]
   }
 }
